--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,13 @@ github_username:  nicolasiugo
 
 # Build settings
 markdown: kramdown
+
+
+#github
+lsi: false
+safe: true
+source: /
+incremental: false
+highlighter: rouge
+gist:
+	noscript: false
