--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: nicolas medeiros
+title: Nicolas Medeiros
 email: nicolasmedeiros@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   I'm a software engineer from Montevideo, Uruguay.  I'm passionate about software, reading and TV. I specialize in web development and agile methodologies.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://nicolasmedeiros.com" # the base hostname & protocol for your site
 twitter_username: kurtkbrain
+linkedin_username:  nicolas.medeiros
 github_username:  nicolasiugo
 
 # Build settings
